<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!-- Product Name Category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/product_name"
            style="@style/CategoryStyle" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            android:hint="@string/product_name_hint"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Product quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/product_quantity"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_remove_black_24dp" />

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Product price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/product_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/product_price_hint"
                android:inputType="numberDecimal"
                android:textAppearance="?android:textAppearanceSmall" />

            <!-- Units for price -->
            <TextView
                android:id="@+id/label_price_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:text="@string/price_units"
                android:textAppearance="?android:textAppearanceSmall" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Product Supplier Name Category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_name"
            style="@style/CategoryStyle" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            android:hint="@string/supplier_name_hint"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Product Supplier Email Category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_email"
            style="@style/CategoryStyle" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_email"
            android:hint="@string/supplier_email_hint"
            android:inputType="textEmailAddress"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Product Supplier Phone Category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_phone"
            style="@style/CategoryStyle" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            android:hint="@string/supplier_phone_hint"
            android:inputType="phone"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <Button
            android:id="@+id/button_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:padding="16dp"
            android:background="@drawable/button_border"
            android:textColor="@color/colorAccent"
            tools:ignore="RtlSymmetry" />

        <!-- Product image -->
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/default_product"
            tools:ignore="ContentDescription"/>

    </RelativeLayout>

</LinearLayout>


